# CCBlade-DICE

./: environment.yml  meson.build  pyproject.toml  setup.py
.github/workflows/: CI_CCBlade.yml
ccblade/: airfoilprep.py  ccblade.py  meson.build
docs/examples/: gradients.py
